--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,8 @@
       <version>2.5.0</version>
     </dependency>
     <dependency>
-      <artifactId>nimbus-jose-jwt</artifactId>
-      <groupId>com.nimbusds</groupId>
-      <version>9.37.3</version>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+      <groupId>org.springframework.boot</groupId>
     </dependency>
     <dependency>
       <artifactId>mysql-connector-java</artifactId>
