--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
       <groupId>org.springframework.boot</groupId>
     </dependency>
     <dependency>
+      <artifactId>okhttp</artifactId>
+      <groupId>com.squareup.okhttp3</groupId>
+      <version>4.12.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>jasypt-spring-boot-starter</artifactId>
+      <groupId>com.github.ulisesbocchio</groupId>
+      <version>3.0.5</version>
+    </dependency>
+    <dependency>
       <artifactId>mysql-connector-java</artifactId>
       <groupId>mysql</groupId>
       <version>8.0.33</version>
