--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,8 +37,6 @@ env:
   ECS_CLUSTER: iapCluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: be-app-container           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
 
 permissions:
   contents: read
@@ -86,13 +84,19 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
+        
+    - name: Fill in the task definition template
+      run: |
+        sed -e "s|\${CONTAINER_NAME}|${{ secrets.CONTAINER_NAME }}|g" \
+            -e "s|\${EXECUTION_ROLE_ARN}|${{ secrets.EXECUTION_ROLE_ARN }}|g" \
+            .aws/task-definition-template.json > .aws/task-definition.json
+            
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
-        container-name: ${{ env.CONTAINER_NAME }}
+        container-name: ${{ secrets.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
