--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'adopt'
+        cache: maven
 
     - name: Build with Maven
       run: mvn clean package -DskipTests
