--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,12 +28,10 @@ jobs:
       run: mvn clean package -DskipTests
       
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v4
       with:
+        role-to-assume: ${{ secrets.EXECUTION_ROLE_ARN }}
         aws-region: ${{ secrets.AWS_REGION }}
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         
     - name: Login to Docker Hub
       uses: docker/login-action@v2
