--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
       <groupId>org.springframework.security</groupId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <artifactId>h2</artifactId>
+      <groupId>com.h2database</groupId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <description>todo-application-be</description>
   <developers>
