--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,21 +1,25 @@
-name: Image to docker hub 
+name: SonarQube analysis and push image to docker hub 
 
 on:
   push:
     branches: [ "master" ]
-
+  pull_request:
+    types: [opened, synchronize, reopened]
+    
 permissions:
   contents: read
 
 jobs:
   deploy:
-    name: Deploy
+    name: Analyze and Push  
     runs-on: ubuntu-latest
     environment: production
 
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Shallow clones should be disabled for better relevancy of analysis
 
     - name: Set up JDK 17
       uses: actions/setup-java@v2
@@ -24,9 +28,25 @@ jobs:
         distribution: 'adopt'
         cache: maven
 
-    - name: Build with Maven
-      run: mvn clean package
-      
+    - name: Cache SonarQube packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+        
+    - name: Cache Maven packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+        
+    - name: Build and analyze
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=todolistjava_todolist-app
+    
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
