--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
       <version>3.0.5</version>
     </dependency>
     <dependency>
-      <artifactId>mysql-connector-java</artifactId>
-      <groupId>mysql</groupId>
-      <version>8.0.33</version>
+      <artifactId>mysql-connector-j</artifactId>
+      <groupId>com.mysql</groupId>
+      <version>9.1.0</version>
     </dependency>
     <dependency>
       <artifactId>lombok</artifactId>
@@ -80,32 +80,20 @@
     </dependency>
   </dependencies>
   <description>todo-application-be</description>
-  <developers>
-    <developer/>
-  </developers>
   <groupId>com.ilkeratik</groupId>
-  <licenses>
-    <license/>
-  </licenses>
   <modelVersion>4.0.0</modelVersion>
   <name>todo-application-be</name>
   <parent>
     <artifactId>spring-boot-starter-parent</artifactId>
     <groupId>org.springframework.boot</groupId>
     <relativePath/>
-    <version>3.3.5</version> <!-- lookup parent from repository -->
+    <version>3.4.2</version> <!-- lookup parent from repository -->
   </parent>
   <properties>
     <java.version>17</java.version>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.organization>todolistjava</sonar.organization>
   </properties>
-  <scm>
-    <connection/>
-    <developerConnection/>
-    <tag/>
-    <url/>
-  </scm>
-  <url/>
 
   <version>0.0.1-SNAPSHOT</version>
-
 </project>
